@@ -22,6 +22,7 @@ exempt of errors.
 - Fredrik Svensson
 - Glen Masgai
 - Hartmut Holzgraefe - hholzgra
+- Ingo Hofmann
 - Jiri Zouhar
 - John Dennis
 - Jonathan Casiot (no_dice)
